--- a/src/VNEDC/locale/zh_hans/LC_MESSAGES/django.po
+++ b/src/VNEDC/locale/zh_hans/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-15 08:30+0700\n"
-"PO-Revision-Date: 2024-07-16 09:44+0700\n"
+"POT-Creation-Date: 2024-07-16 14:10+0700\n"
+"PO-Revision-Date: 2024-07-16 14:37+0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -37,11 +37,11 @@ msgstr ""
 #: .\collection\templates\collection\daily_info_create.html:31
 #: .\collection\templates\collection\record.html:45 .\users\forms.py:61
 msgid "save"
-msgstr ""
+msgstr "储存"
 
 #: .\bases\templates\bases\base.html:52
 msgid "Key Parameter"
-msgstr ""
+msgstr "关键参数"
 
 #: .\bases\templates\bases\base.html:54
 #: .\collection\templates\collection\test.html:150
@@ -55,137 +55,141 @@ msgstr ""
 
 #: .\bases\templates\bases\base.html:64 .\users\templates\users\base.html:26
 msgid "Personal Setting"
-msgstr ""
+msgstr "个人资讯"
 
 #: .\bases\templates\bases\base.html:65
 #: .\collection\templates\collection\test.html:157
 msgid "Logout"
-msgstr ""
+msgstr "登出"
 
 #: .\bases\utils.py:61
 msgid "Update Status"
-msgstr ""
+msgstr "更新状态"
 
 #: .\chart\forms.py:15 .\collection\forms.py:12
 msgid "plant"
-msgstr ""
+msgstr "工厂"
 
 #: .\chart\forms.py:16 .\collection\forms.py:13
 msgid "mach_name"
-msgstr ""
+msgstr "机台"
 
 #: .\chart\forms.py:17
 msgid "process_type"
-msgstr ""
+msgstr "制程类型"
 
 #: .\chart\forms.py:18
 msgid "param_define"
-msgstr ""
+msgstr "参数定义"
 
 #: .\chart\forms.py:19
 msgid "control_high"
-msgstr ""
+msgstr "控制上限"
 
 #: .\chart\forms.py:20
 msgid "control_low"
-msgstr ""
+msgstr "控制下限"
 
 #: .\chart\templates\chart\param_value.html:223
 msgid "Record"
-msgstr ""
+msgstr "报工新增"
 
 #: .\collection\forms.py:11
 msgid "record_date"
-msgstr ""
+msgstr "作业日期"
 
 #: .\collection\forms.py:44
 msgid "Chlorine Free"
-msgstr ""
+msgstr "无氯"
 
 #: .\collection\forms.py:44
 msgid "Polymer Free"
-msgstr ""
+msgstr "无二次料"
 
 #: .\collection\forms.py:44
 msgid "Alkaline Tank pH Test"
-msgstr ""
+msgstr "碱槽测pH值"
 
 #: .\collection\forms.py:48
 msgid "A1 Production"
-msgstr ""
+msgstr "A1产品"
 
 #: .\collection\forms.py:49
 msgid "A1 Size"
-msgstr ""
+msgstr "A1尺寸"
 
 #: .\collection\forms.py:50
 msgid "A2 Production"
-msgstr ""
+msgstr "A2产品"
 
 #: .\collection\forms.py:51
 msgid "A2 Size"
-msgstr ""
+msgstr "A2尺寸"
 
 #: .\collection\forms.py:52
 msgid "B1 Production"
-msgstr ""
+msgstr "B1产品"
 
 #: .\collection\forms.py:53
 msgid "B1 Size"
-msgstr ""
+msgstr "B1尺寸"
 
 #: .\collection\forms.py:54
 msgid "B2 Production"
-msgstr ""
+msgstr "B2产品"
 
 #: .\collection\forms.py:55
 msgid "B2 Size"
-msgstr ""
+msgstr "B2尺寸"
 
 #: .\collection\forms.py:56
 msgid "Remark"
-msgstr ""
+msgstr "备注"
 
 #: .\collection\forms.py:58
 msgid "Change Coagulant Time(Hour)"
-msgstr ""
+msgstr "换凝固剂时间(Hour)"
 
 #: .\collection\forms.py:59
 msgid "Change Coagulant Time(Minute)"
-msgstr ""
+msgstr "换凝固剂时间(Minute)"
 
 #: .\collection\forms.py:60
 msgid "Change Latex Time(Hour)"
-msgstr ""
+msgstr "换乳胶时间(Hour)"
 
 #: .\collection\forms.py:61
 msgid "Change Latex Time(Minute)"
-msgstr ""
+msgstr "换乳胶时间(Minute)"
 
 #: .\collection\forms.py:62
 msgid "Change Tooling Time(Hour)"
-msgstr ""
+msgstr "换模时间(Hour)"
 
 #: .\collection\forms.py:63
 msgid "Change Tooling Time(Minute)"
-msgstr ""
+msgstr "换模时间(Minute)"
 
 #: .\collection\forms.py:64 .\collection\templates\collection\base.html:78
 msgid "Plant"
-msgstr ""
+msgstr "厂别"
 
 #: .\collection\templates\collection\base.html:93
 msgid "Machine"
-msgstr ""
+msgstr "机台"
 
 #: .\collection\templates\collection\base.html:106
 msgid "Record Date"
-msgstr ""
+msgstr "作业日期"
 
 #: .\collection\templates\collection\base.html:112
 #: .\users\templates\users\base.html:21
 msgid "Chart"
-msgstr ""
+msgstr "圖表"
+
+#: .\collection\templates\collection\base.html:131
+msgid "Production Data"
+msgstr "生产资料"
 
 #: .\collection\templates\collection\test.html:148
 msgid "Home"
@@ -195,23 +199,23 @@ msgstr ""
 msgid "Services"
 msgstr ""
 
-#: .\collection\templates\collection\test.html:156 .\users\forms.py:141
+#: .\collection\templates\collection\test.html:156 .\users\forms.py:154
 msgid "Change Password"
-msgstr ""
+msgstr "变更密码"
 
 #: .\collection\views.py:102 .\collection\views.py:168
 msgid "Update Done"
-msgstr ""
+msgstr "更新完成"
 
-#: .\users\admin.py:28
+#: .\users\admin.py:29
 msgid "Personal info"
-msgstr ""
+msgstr "个人资讯"
 
-#: .\users\admin.py:30
+#: .\users\admin.py:31
 msgid "Permissions"
-msgstr ""
+msgstr "权限"
 
-#: .\users\admin.py:32
+#: .\users\admin.py:33
 msgid "Important dates"
 msgstr ""
 
@@ -219,7 +223,7 @@ msgstr ""
 msgid "user_type"
 msgstr ""
 
-#: .\users\forms.py:47 .\users\models.py:97
+#: .\users\forms.py:47 .\users\models.py:107
 msgid "active"
 msgstr ""
 
@@ -239,12 +243,12 @@ msgstr ""
 msgid "Please type the login password again"
 msgstr ""
 
-#: .\users\forms.py:50 .\users\models.py:79
+#: .\users\forms.py:50 .\users\models.py:89
 #: .\users\templates\users\login.html:168
 msgid "emp_no"
 msgstr ""
 
-#: .\users\forms.py:51 .\users\models.py:80
+#: .\users\forms.py:51 .\users\models.py:90
 msgid "sap_emp_no"
 msgstr ""
 
@@ -256,7 +260,7 @@ msgstr ""
 msgid "dept"
 msgstr ""
 
-#: .\users\forms.py:105 .\users\forms.py:164
+#: .\users\forms.py:105 .\users\forms.py:177
 msgid "The password is not same with the confirm password"
 msgstr ""
 
@@ -284,69 +288,69 @@ msgstr ""
 msgid "Please type the confirm password"
 msgstr ""
 
-#: .\users\forms.py:130
+#: .\users\forms.py:139
 msgid "base_information"
 msgstr ""
 
-#: .\users\forms.py:169
+#: .\users\forms.py:182
 msgid "The password is not correct"
 msgstr ""
 
-#: .\users\models.py:31
+#: .\users\models.py:41
 msgid "類別"
 msgstr ""
 
-#: .\users\models.py:81
+#: .\users\models.py:91
 msgid "username"
 msgstr ""
 
-#: .\users\models.py:82
+#: .\users\models.py:92
 msgid "email address"
 msgstr ""
 
-#: .\users\models.py:84
+#: .\users\models.py:94
 msgid "first name"
 msgstr ""
 
-#: .\users\models.py:85
+#: .\users\models.py:95
 msgid "last name"
 msgstr ""
 
-#: .\users\models.py:87
+#: .\users\models.py:97
 msgid "mobile number"
 msgstr ""
 
-#: .\users\models.py:89
+#: .\users\models.py:99
 msgid "Required. digits and +-() only."
 msgstr ""
 
-#: .\users\models.py:91
+#: .\users\models.py:101
 msgid "Enter a valid mobile number."
 msgstr ""
 
-#: .\users\models.py:94
+#: .\users\models.py:104
 msgid "staff status"
 msgstr ""
 
-#: .\users\models.py:95
+#: .\users\models.py:105
 msgid "Designates whether the user can log into this admin site."
 msgstr ""
 
-#: .\users\models.py:98
+#: .\users\models.py:108
 msgid ""
 "Designates whether this user should be treated as active. Unselect this "
 "instead of deleting accounts."
 msgstr ""
 
-#: .\users\models.py:100
+#: .\users\models.py:110
 msgid "date joined"
 msgstr ""
 
-#: .\users\models.py:110
+#: .\users\models.py:121
 msgid "user"
 msgstr ""
 
-#: .\users\models.py:111
+#: .\users\models.py:122
 msgid "users"
 msgstr ""
 
