--- a/src/VNEDC/locale/vi/LC_MESSAGES/django.po
+++ b/src/VNEDC/locale/vi/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-07-16 14:10+0700\n"
-"PO-Revision-Date: 2024-07-16 14:11+0700\n"
+"PO-Revision-Date: 2024-07-16 16:57+0700\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: vi_VN\n"
@@ -103,7 +103,7 @@ msgstr "Không chứa clo"
 
 #: .\collection\forms.py:44
 msgid "Polymer Free"
-msgstr "Polymer miễn phí"
+msgstr "Không chứa vật liệu thứ cấp"
 
 #: .\collection\forms.py:44
 msgid "Alkaline Tank pH Test"
